# vtes-twd-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  acceleration_full_simulation.ipynb  pyproject.toml  simulations.capa-agnostic.parquet
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: feature-review.yml  pre-commit.yml  publish.yml  scrape.yml  spike-calendar-fields.yml  validate.yml
docs/: feasibility-evaluation.md  vekn-scraping-design.md
output/: 12598.yaml  12806.yaml  12826.yaml  12827.yaml  12831.yaml  12852.yaml  12853.yaml  12922.yaml  12933.yaml  12986.yaml  12996.yaml  13135.yaml
publish/2026/04/: 2026-04-06.md
reviews/: pr-4-evaluation.md
scripts/: update_yaml_files.py  validate_vekn_numbers.py
spike/: calendar_fields.py  test_events.txt
tests/: test_cli.py  test_cli_common.py  test_cli_fix_dates.py  test_cli_parse.py  test_cli_publish.py  test_cli_rescrape.py  test_cli_scrape.py  test_cli_validate.py  test_krcg_helper.py  test_models.py  test_output.py  test_parser.py  test_parser_extras.py  test_publisher.py  test_scraper.py  test_scraper_icons.py  test_validator.py
twds/: coercions.json
twds/2014/10/: 7828.yaml  7830.yaml
twds/2019/01/: 9115.yaml
twds/2019/11/: 9404.yaml
twds/2021/10/: 9895.yaml
twds/2021/11/: 9913.yaml
twds/2021/12/: 10012.yaml
twds/2022/01/: 10022.yaml  10032.yaml  9972.yaml
twds/2022/02/: 10049.yaml  10051.yaml  10073.yaml  10077.yaml
twds/2022/03/: 10080.yaml  10122.yaml  10127.yaml
twds/2022/04/: 10139.yaml  10140.yaml  10150.yaml  10170.yaml
twds/2022/05/: 10044.yaml  10126.yaml  10184.yaml  10190.yaml
twds/2022/06/: 10111.yaml  10112.yaml  10113.yaml  10114.yaml  10124.yaml  10144.yaml  10209.yaml  10214.yaml  10219.yaml  10240.yaml
twds/2022/07/: 10201.yaml  10218.yaml  10234.yaml  10235.yaml  10247.yaml  10273.yaml  10283.yaml  10285.yaml  10295.yaml
twds/2022/08/: 10161.yaml  10284.yaml  10305.yaml  10343.yaml
twds/2022/09/: 10188.yaml  10346.yaml  10348.yaml  10380.yaml
twds/2022/10/: 10272.yaml  10301.yaml  10335.yaml  10350.yaml  10357.yaml  10377.yaml  10382.yaml  10403.yaml
twds/2022/11/: 10309.yaml  10310.yaml  10372.yaml  10411.yaml  10453.yaml  10456.yaml
twds/2022/12/: 10415.yaml  10449.yaml  10454.yaml  10475.yaml
twds/2023/01/: 10444.yaml  10506.yaml  10513.yaml  10519.yaml  10521.yaml  10538.yaml
twds/2023/02/: 10481.yaml  10533.yaml  10571.yaml  (+3 more)
twds/changes_required/: 11431.yaml  11881.yaml  12960.yaml
vtes_scraper/: __init__.py  _krcg_helper.py  cli.py  models.py  output.py  parser.py  publisher.py  scraper.py  test.py  validator.py
vtes_scraper/cli/: __init__.py  __main__.py  _common.py  fix_dates.py  parse.py  publish.py  rescrape.py  scrape.py  validate.py
vtes_scraper/helpers/: __init__.py  txt.py  yaml.py
vtes_scraper/output/: __init__.py  _common.py  txt.py  yaml.py
vtes_scraper/parser/: __init__.py  _deck.py  _header.py  _helpers.py  _twd.py
vtes_scraper/scraper/: __init__.py  _forum.py  _http.py  _icons.py  _vekn.py
vtes_scraper_v1/: __init__.py  models.py  parser.py  publisher.py  scraper.py  validator.py
vtes_scraper_v1/cli/: __init__.py  _common.py  fix_dates.py  parse.py  publish.py  rescrape.py  scrape.py  validate.py
vtes_scraper_v1/output/: __init__.py  _common.py  txt.py  yaml.py
vtes_scraper_v1/scripts/: update_yaml_files.py
(+839 files in other folders)
