[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtes-twd-scraper"
version = "0.2.0"
description = "Scrape VTES tournament winning decks from vekn.net and export to YAML"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "beautifulsoup4>=4.12",  # HTML parsing
    "httpx>=0.27",           # HTTP client (async-ready for future extension)
    "krcg>=4.0",             # VTES card database (section validation)
    "lxml>=5.0",             # Fast HTML parser backend for bs4
    "pydantic>=2.11",        # Data validation and models
    "python-dotenv>=1.2",    # Access to .env
    "ruamel.yaml>=0.18",     # YAML serialization (preserves formatting)
    "rich>=13.0",            # Pretty terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",           # 9.0+ required for Python 3.14 compatibility
    "pytest-cov>=5.0",
    "ruff>=0.4",             # Linter + formatter
    "mypy>=1.10",
]

[project.scripts]
vtes-scraper = "vtes_scraper.cli:main"

[tool.setuptools.packages.find]
include = ["vtes_scraper*"]

# ---------------------------------------------------------------------------
# Ruff (linter/formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
